[gd_scene load_steps=17 format=2]

[ext_resource path="res://minigames/chemconnect/minigameTile/sprites/tile_background_border.png" type="Texture" id=1]
[ext_resource path="res://minigames/chemconnect/minigameTile/tileRedirect/TileRedirect.gd" type="Script" id=2]
[ext_resource path="res://minigames/chemconnect/minigameTile/sprites/tile_overlay_line_half.png" type="Texture" id=3]
[ext_resource path="res://minigames/chemconnect/minigameTile/sprites/tile_background_standard.png" type="Texture" id=4]
[ext_resource path="res://minigames/chemconnect/minigameTile/sprites/tile_overlay_redirect.png" type="Texture" id=5]
[ext_resource path="res://minigames/chemconnect/minigameTile/sprites/tile_null.png" type="Texture" id=6]
[ext_resource path="res://minigames/chemconnect/minigameTile/sprites/tile_overlay_redirect_active.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "activate"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LineOutput:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "deactivate"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("LineOutput:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "turn_-1_0"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LineOutput:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "turn_0_1"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LineOutput:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "turn_1_2"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LineOutput:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 180.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "turn_2_3"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LineOutput:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 270.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 270.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "turn_3_4"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LineOutput:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arrow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 360.0 ]
}

[node name="TileRedirect" type="TextureButton"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
stretch_mode = 2
script = ExtResource( 2 )

[node name="Background" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
centered = false

[node name="Arrow" type="AnimatedSprite" parent="."]
position = Vector2( 50, 50 )
rotation = 4.71239
frames = SubResource( 9 )
frame = 1

[node name="LineOutput" type="Sprite" parent="."]
position = Vector2( 50, 50 )
rotation = 4.71239
z_index = 1
texture = ExtResource( 3 )

[node name="OverlayAnimator" type="AnimationPlayer" parent="."]
anims/activate = SubResource( 1 )
anims/deactivate = SubResource( 2 )
anims/turn_-1_0 = SubResource( 7 )
anims/turn_0_1 = SubResource( 3 )
anims/turn_1_2 = SubResource( 4 )
anims/turn_2_3 = SubResource( 5 )
anims/turn_3_4 = SubResource( 6 )

[node name="In_0_-1" type="Sprite" parent="."]
position = Vector2( 50, 50 )
z_index = 1
texture = ExtResource( 3 )

[node name="In_0_1" type="Sprite" parent="."]
position = Vector2( 50, 50 )
rotation = 3.14159
z_index = 1
texture = ExtResource( 3 )

[node name="In_-1_0" type="Sprite" parent="."]
position = Vector2( 50, 50 )
rotation = 1.5708
z_index = 1
texture = ExtResource( 3 )

[node name="In_1_0" type="Sprite" parent="."]
position = Vector2( 50, 50 )
rotation = 4.71239
z_index = 1
texture = ExtResource( 3 )

[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
[connection signal="animation_finished" from="OverlayAnimator" to="." method="_on_OverlayAnimator_animation_finished"]
[connection signal="animation_started" from="OverlayAnimator" to="." method="_on_OverlayAnimator_animation_started"]
